--- a/Poing/.settings/org.eclipse.core.resources.prefs
+++ b/Poing/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/layout/header.jsp=UTF-8
 encoding//WebContent/WEB-INF/layout/popup_wrap.jspf=UTF-8
 encoding/<project>=UTF-8
