--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -1,7 +1,19 @@
-/main.do=poing.display.main.DisplayMainHandler
-#/popup/sign=poing.main.DisplayMainHandler
-/user/login.do=poing.member.auth.handler.LoginMemberHandler
-/user/join.do=poing.member.auth.handler.JoinMemberHandler
-/product/list.do=poing.product.display.handler.DisplayProductListHandler
-/product/detail.do=poing.product.display.handler.DisplayProductDetailHandler
-#somecmd=anySomeHandler
+
+
+#mainpage
+/main=poing.display.main.DisplayMainHandler
+/theme/hotPlace=poing.display.main.DisplayHotPlaceHandler
+
+#user
+/user/login=poing.member.auth.handler.LoginMemberHandler
+/user/join=poing.member.auth.handler.JoinMemberHandler
+
+
+
+
+#product
+/product/list=poing.product.display.handler.DisplayProductListHandler
+/product/detail=poing.product.display.handler.DisplayProductDetailHandler
+
+
+
