--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -1,19 +1,19 @@
 
 
 #mainpage
-/main=poing.display.main.DisplayMainHandler
-/theme/hotPlace=poing.display.main.DisplayHotPlaceHandler
+/main.do=poing.display.main.DisplayMainHandler
+/theme/hotPlace.do=poing.display.main.DisplayHotPlaceHandler
 
 #user
-/user/login=poing.member.auth.handler.LoginMemberHandler
-/user/join=poing.member.auth.handler.JoinMemberHandler
+/user/login.do=poing.member.auth.handler.LoginMemberHandler
+/user/join.do=poing.member.auth.handler.JoinMemberHandler
 
 
 
 
 #product
-/product/list=poing.product.display.handler.DisplayProductListHandler
-/product/detail=poing.product.display.handler.DisplayProductDetailHandler
+/product/list.do=poing.product.display.handler.DisplayProductListHandler
+/product/detail.do=poing.product.display.handler.DisplayProductDetailHandler
 
 
 
