--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -43,17 +43,8 @@
     <filter-name>encodingFile</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-	<!-- <filter>
-		<filter-name>requestfilter</filter-name>
-		<filter-class>com.filter.RequestFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>requestfilter</filter-name>
-		<servlet-name>ControllerUsingURI</servlet-name>
-		<dispatcher>REQUEST</dispatcher>
-	</filter-mapping> -->
-
+  
+	
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
     <servlet-class>poing.mvc.ControllerUsingURI</servlet-class>
@@ -65,7 +56,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ControllerUsingURI</servlet-name>
-    <url-pattern>/</url-pattern> 
+    <url-pattern>*.do</url-pattern> 
   </servlet-mapping>
   
 </web-app>
