--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -8,7 +8,10 @@
 /user/login.do=poing.member.auth.handler.LoginMemberHandler
 /user/join.do=poing.member.auth.handler.JoinMemberHandler
 /user/logout.do=poing.member.auth.handler.LogoutMemberHandler
+/user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 
+#timeline
+#/timeline.do=
 
 
 #product
@@ -16,4 +19,6 @@
 /product/detail.do=poing.product.display.handler.DisplayProductDetailHandler
 
 
+#review
+#/Poing/review/list.do=poing.review.display.handler.D
 
