합치기 완료

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -1,5 +1,3 @@
-
-
 #mainpage
 /main.do=poing.display.main.DisplayMainHandler
 /theme/hotPlace.do=poing.display.main.DisplayHotPlaceHandler
@@ -20,5 +18,9 @@
 
 
 #review
-#/Poing/review/list.do=poing.review.display.handler.D
+/review.do=poing.review.display.handler.DisplayReviewHandler
 
+
+#restaurant
+/rest/list.do=poing.rest.display.handler.DisplayRestListHandler
+/rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
