--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -9,7 +9,7 @@
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 
 #timeline
-#/timeline.do=
+/timeline.do=poing.member.display.handler.DisplayTimelineHandler
 
 
 #product
