--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -57,6 +57,7 @@
   <servlet-mapping>
     <servlet-name>ControllerUsingURI</servlet-name>
     <url-pattern>*.do</url-pattern> 
+    <url-pattern>*.ejs</url-pattern> 
   </servlet-mapping>
   
 </web-app>
