--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -24,3 +24,15 @@
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
+
+
+#popup
+/popup/sign.do=poing.popup.handler.PopupHandler
+/popup/level_qna.do=poing.popup.handler.PopupHandler
+/popup/point_history.do=poing.popup.handler.PopupHandler
+/popup/qna.do=poing.popup.handler.PopupHandler
+/util/upload.do=poing.popup.handler.PopupHandler
+/popup/follow.do=poing.popup.handler.PopupHandler
+/popup/followList.do=poing.popup.handler.PopupHandler
+#/popup/follow.ejs.do=poing.popup.handler.PopupHandler
+
