--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -36,3 +36,6 @@
 /popup/followList.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
+#reserve popup
+/restaurant/AjaxRestaurantInfo.do=poing.popup.handler.PopupHandler
+
