리뷰 자동완성 완료

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -22,7 +22,7 @@
 
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
-
+/restaurant/search.do=poing.review.display.handler.SearchRestaurantHandler
 
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
