--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -22,7 +22,7 @@
 
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
-
+/review/ajaxsendreview.do = poing.review.insert.handler.WriteReviewHandler
 
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
