--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -24,7 +24,7 @@
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
-
+/rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
