--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -7,6 +7,8 @@
 /user/join.do=poing.member.auth.handler.JoinMemberHandler
 /user/logout.do=poing.member.auth.handler.LogoutMemberHandler
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
+/user/ajaxfollow.do=poing.member.follow.handler.ModifyFollowHandler
+
 
 #timeline
 /timeline.do=poing.member.display.handler.DisplayTimelineHandler
