--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -1,5 +1,6 @@
 #mainpage
 /main.do=poing.display.main.DisplayMainHandler
+/main/ajaxfavorite.do=poing.display.main.DisplayFavHandler
 /theme/hotPlace.do=poing.display.main.DisplayHotPlaceHandler
 
 #user
@@ -40,6 +41,7 @@
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
+/pick/popup/confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
