--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -19,6 +19,13 @@
 /product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
 /product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
 /product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
+/product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
+
+#search
+/search/searchList.do=poing.product.display.handler.DisplaySearchHandler
+
+#cart
+/popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
 
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
@@ -40,6 +47,7 @@
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
+/popup/basket_confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
