--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -19,7 +19,9 @@
 /product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
 /product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
 /product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
-
+/product/productCart.do=poing.pay.productCart.DisplayProductCartHandler
+/product/productOrder.do=poing.product.display.handler.DisplayProductOrderHandler
+/product/p_payMent.do=poing.pay.productCart.ProductPayHandler
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
 
@@ -37,9 +39,14 @@
 /util/upload.do=poing.popup.handler.PopupHandler
 /popup/follow.do=poing.popup.handler.PopupHandler
 /popup/followList.do=poing.popup.handler.PopupHandler
-/popup/reserve_coupon.do=poing.popup.handler.PopupHandler
+/popup/reserve_coupon.do=poing.popup.handler.ReservePopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
+/popup/confirm2.do=poing.popup.handler.PopupHandler
+/popup/basket_confirm.do=poing.popup.handler.PopupHandler
+/popup/basket_no_confirm.do=poing.popup.handler.PopupHandler
+/popup/pointConfirm.do=poing.popup.handler.PopupHandler
+
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
