suno_0530 예약 작성중

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -39,6 +39,7 @@
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
 /rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
+/rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
