--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -34,11 +34,16 @@
 /review.do=poing.review.display.handler.DisplayReviewHandler
 /review/ajaxsendreview.do = poing.review.insert.handler.WriteReviewHandler
 /restaurant/search.do=poing.review.display.handler.SearchRestaurantHandler
+/review/ajaxlike.do=poing.review.like.handler.ReviewLikeHandler
+/review/ajaxsendreviewcomment.do=poing.review.insert.handler.WriteCommentHandler
+/review/getComments.do=poing.review.display.handler.DisplayCommentHandler
+
 
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
 /rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
+
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
