--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -22,7 +22,7 @@
 /product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
 /product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
 /product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
-/product/productCart.do=poing.product.display.handler.DisplayCartHandler
+#/product/productCart.do=poing.product.display.handler.DisplayCartHandler
 
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
