--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -10,7 +10,6 @@
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 /user/ajaxfollow.do=poing.member.follow.handler.ModifyFollowHandler
 
-
 #timeline
 /timeline.do=poing.member.display.handler.DisplayTimelineHandler
 
@@ -38,7 +37,6 @@
 /review/ajaxsendreviewcomment.do=poing.review.insert.handler.WriteCommentHandler
 /review/getComments.do=poing.review.display.handler.DisplayCommentHandler
 
-
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
@@ -50,7 +48,6 @@
 /popup/level_qna.do=poing.popup.handler.PopupHandler
 /popup/point_history.do=poing.popup.handler.PopupHandler
 /popup/qna.do=poing.popup.handler.PopupHandler
-/util/upload.do=poing.popup.handler.PopupHandler
 /popup/follow.do=poing.popup.handler.PopupHandler
 /popup/followList.do=poing.popup.handler.PopupHandler
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
@@ -60,4 +57,9 @@
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
+#upload
+#/util/upload.do=poing.popup.handler.PopupHandler
+/util/upload.do=poing.upload.handler.UploadFileHander
+/user/uploadprofileimage.do=poing.upload.handler.UploadProfileFileHander
+/review/ajaxsendreviewphoto.do=poing.upload.handler.UploadReviewImageHandler
 
