--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -22,20 +22,17 @@
 /product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
 /product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
 /product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
-<<<<<<< HEAD
 /product/productCart.do=poing.pay.productCart.DisplayProductCartHandler
 /product/productOrder.do=poing.product.display.handler.DisplayProductOrderHandler
 /product/p_payMent.do=poing.pay.productCart.ProductPayHandler
-=======
 /product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
-
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
 #cart
 /popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
+/productCart/modifyCartReservation.do=poing.product.display.handler.ModifyCartReservationHandler
 
->>>>>>> branch 'jindonghyen' of https://github.com/Kouzie/Poing.git
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
 /review/ajaxsendreview.do = poing.review.insert.handler.WriteReviewHandler
@@ -54,19 +51,18 @@
 /util/upload.do=poing.popup.handler.PopupHandler
 /popup/follow.do=poing.popup.handler.PopupHandler
 /popup/followList.do=poing.popup.handler.PopupHandler
-/popup/reserve_coupon.do=poing.popup.handler.ReservePopupHandler
+/popup/reserve_coupon.do=poing.popup.handler.Reserve_couponHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
-<<<<<<< HEAD
 /popup/confirm2.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_no_confirm.do=poing.popup.handler.PopupHandler
 /popup/pointConfirm.do=poing.popup.handler.PopupHandler
+/popup/pointConfirm.do=poing.popup.handler.PopupHandler
+/popup/addCart.do=poing.popup.handler.AddCartHandler
 
-=======
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
->>>>>>> branch 'jindonghyen' of https://github.com/Kouzie/Poing.git
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
