--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -40,6 +40,7 @@
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
 /rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
 /rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
+/rest/ajaxreserveEdit.do=poing.rest.insert.handler.RestReserveEditHandler
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
@@ -51,6 +52,7 @@
 /popup/followList.do=poing.popup.handler.PopupHandler
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
+/popup/reserve_edit_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
