0602_suno예약확인&예약변경완료

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -36,11 +36,12 @@
 /restaurant/search.do=poing.review.display.handler.SearchRestaurantHandler
 
 #restaurant
+/rest/ajax/ajaxreserveedit.do=poing.rest.insert.handler.RestReserveEditHandler
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
 /rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
 /rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
-/rest/ajaxreserveEdit.do=poing.rest.insert.handler.RestReserveEditHandler
+
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
