--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -36,6 +36,9 @@
 /review/ajaxlike.do=poing.review.like.handler.ReviewLikeHandler
 /review/ajaxsendreviewcomment.do=poing.review.insert.handler.WriteCommentHandler
 /review/getComments.do=poing.review.display.handler.DisplayCommentHandler
+/review/ajaxrenderreview.do=poing.review.display.handler.RendReivewHandler
+
+
 
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
