타임라인 리뷰 작업, 찜 작업중 20190603

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -37,7 +37,11 @@
 /review/ajaxsendreviewcomment.do=poing.review.insert.handler.WriteCommentHandler
 /review/getComments.do=poing.review.display.handler.DisplayCommentHandler
 /review/ajaxrenderreview.do=poing.review.display.handler.RendReivewHandler
-
+/review/ajaxModifyReview.do=poing.review.update.handler.UpdateReviewHandler
+/review/ajaxremovereview.do=poing.review.delete.handler.RemoveReviewHandler
+/review/ajaxremovecomment.do=poing.review.delete.handler.RemoveCommentHandler
+/review/ajaxmodifycomment.do=poing.review.update.handler.UpdateCommentHandler
+/review/ajaxfavorite.do=poing.review.pick.handler.ReviewPickHandler
 
 
 #restaurant
@@ -46,7 +50,6 @@
 /rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
 /rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
 /rest/ajaxreserveEdit.do=poing.rest.insert.handler.RestReserveEditHandler
-
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
