알림창 설정

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -9,7 +9,6 @@
 /user/logout.do=poing.member.auth.handler.LogoutMemberHandler
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 /user/ajaxfollow.do=poing.member.follow.handler.ModifyFollowHandler
-
 #timeline
 /timeline.do=poing.member.display.handler.DisplayTimelineHandler
 
@@ -61,10 +60,12 @@
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/reserve_edit_rest.do=poing.popup.handler.PopupHandler
-/popup/confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
+/user/UserNotice.do=poing.popup.handler.PopupHandler
+/user/noticeCheck.do=poing.popup.handler.PopupHandler
+
 
 #upload
 #/util/upload.do=poing.popup.handler.PopupHandler
