--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -25,6 +25,7 @@
 /product/productOrder.do=poing.product.display.handler.DisplayProductOrderHandler
 /product/p_payMent.do=poing.pay.productCart.ProductPayHandler
 /product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
+/product/cartDelete.do=poing.product.display.handler.cartDeleteHandler
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
@@ -63,6 +64,7 @@
 /popup/pointConfirm.do=poing.popup.handler.PopupHandler
 /popup/pointConfirm.do=poing.popup.handler.PopupHandler
 /popup/addCart.do=poing.popup.handler.AddCartHandler
+/popup/deleteCart.do=poing.popup.handler.PopupHandler
 
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
