--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -22,7 +22,10 @@
 /product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
 /product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
 /product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
-#/product/productCart.do=poing.product.display.handler.DisplayCartHandler
+/product/productCart.do=poing.product.display.handler.DisplayCartHandler
+
+#cart
+/cart/delete.do
 
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
@@ -52,6 +55,7 @@
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
+/popup/basket_no_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
