--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -9,6 +9,7 @@
 /user/logout.do=poing.member.auth.handler.LogoutMemberHandler
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 /user/ajaxfollow.do=poing.member.follow.handler.ModifyFollowHandler
+
 #timeline
 /timeline.do=poing.member.display.handler.DisplayTimelineHandler
 
@@ -46,9 +47,14 @@
 #restaurant
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
-/rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
+#/rest/detail/photo.do=poing.rest.display.handler.DisplayRestDetailPhotoHandler
+#/rest/detail/review.do=poing.rest.display.handler.DisplayRestDetailReviewHandler
+#/rest/detail/menu.do=poing.rest.display.handler.DisplayRestDetailMenuHandler
+#/rest/detail/map.do=poing.rest.display.handler.DisplayRestDetailMapHandler
+
 /rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
 /rest/ajaxreserveEdit.do=poing.rest.insert.handler.RestReserveEditHandler
+
 
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
@@ -62,13 +68,11 @@
 /popup/reserve_edit_rest.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
-#/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 /user/UserNotice.do=poing.popup.handler.PopupHandler
 /user/noticeCheck.do=poing.popup.handler.PopupHandler
 
 
 #upload
-#/util/upload.do=poing.popup.handler.PopupHandler
 /util/upload.do=poing.upload.handler.UploadFileHander
 /user/uploadprofileimage.do=poing.upload.handler.UploadProfileFileHander
 /review/ajaxsendreviewphoto.do=poing.upload.handler.UploadReviewImageHandler
