--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -1,7 +1,7 @@
 #mainpage
-/main.do=poing.display.main.DisplayMainHandler
-/main/ajaxfavorite.do=poing.display.main.DisplayFavHandler
-/theme/hotPlace.do=poing.display.main.DisplayHotPlaceHandler
+/main.do=poing.display.main.handler.DisplayMainHandler
+/main/ajaxfavorite.do=poing.display.main.handler.DisplayFavHandler
+/theme/hotPlace.do=poing.display.main.handler.DisplayHotPlaceHandler
 
 #user
 /user/login.do=poing.member.auth.handler.LoginMemberHandler
