--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -17,10 +17,10 @@
 #product
 /product/list.do=poing.product.display.handler.DisplayProductListHandler
 /product/detail.do=poing.product.display.handler.DisplayProductDetailHandler
-/product/detail/photo.do=poing.product.display.handler.DisplayProductPhotoHandler
-/product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
-/product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
-/product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
+#/product/detail/photo.do=poing.product.display.handler.DisplayProductPhotoHandler
+#/product/detail/menu.do=poing.product.display.handler.DisplayProductMenuHandler
+#/product/detail/map.do=poing.product.display.handler.DisplayProductMapHandler
+#/product/detail/qna.do=poing.product.display.handler.DisplayProductQnaHandler
 /product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
 
 #search
