--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -57,6 +57,10 @@
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
+#news/notice
+/user/noticeCheck.do=poing.popup.handler.PopupHandler
+/user/UserNotice.do=poing.popup.handler.PopupHandler
+/user/PoingNotice.do=poing.popup.handler.PopupHandler
 
 #upload
 #/util/upload.do=poing.popup.handler.PopupHandler
