--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -25,13 +25,16 @@
 /product/productCart.do=poing.product.display.handler.DisplayCartHandler
 
 #cart
-/cart/delete.do
+/cart/delete.do=poing.cart.DeleteCartHandler
+#/cart/changeCart.do=poing.cart.ConfirmOptionHandler
+/popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
+/cart/optionCart.do=poing.cart.UpdateOptionHandler
 
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
-#cart
-/popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
+
+
 
 #review
 /review.do=poing.review.display.handler.DisplayReviewHandler
@@ -52,11 +55,15 @@
 /popup/follow.do=poing.popup.handler.PopupHandler
 /popup/followList.do=poing.popup.handler.PopupHandler
 /popup/reserve_coupon.do=poing.popup.handler.PopupHandler
+/popup/change_coupon.do=poing.popup.handler.PopupHandler
 /popup/reserve_rest.do=poing.popup.handler.PopupHandler
 /popup/confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_confirm.do=poing.popup.handler.PopupHandler
 /popup/basket_no_confirm.do=poing.popup.handler.PopupHandler
 /pick/popup/confirm.do=poing.popup.handler.PopupHandler
+/popup/delete_confirm.do=poing.popup.handler.PopupHandler
+/popup/change_option.do=poing.cart.UpdateOptionHandler
+/popup/change.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
