--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -41,8 +41,7 @@
   </filter>
   <filter-mapping>
     <filter-name>encodingFile</filter-name>
-    <url-pattern>*.do</url-pattern>
-    <url-pattern>*.ad</url-pattern>
+    <url-pattern>/</url-pattern>
   </filter-mapping>
   
   <servlet>
