--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -26,10 +26,10 @@
 
 #cart
 /cart/delete.do=poing.cart.DeleteCartHandler
-#/cart/changeCart.do=poing.cart.ConfirmOptionHandler
+/cart/changeCart.do=poing.cart.UpdateCartHandler
 /popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
-/cart/optionCart.do=poing.cart.UpdateOptionHandler
-
+/cart/optionCart.do=poing.cart.ConfirmOptionHandler
+/option/deleteOption.do=poing.cart.DeleteOptionHandler
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
@@ -64,6 +64,7 @@
 /popup/delete_confirm.do=poing.popup.handler.PopupHandler
 /popup/change_option.do=poing.cart.UpdateOptionHandler
 /popup/change.do=poing.popup.handler.PopupHandler
+/popup/optionconfirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
 
 
