--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -52,9 +52,8 @@
 /rest/ajax/restReserveDelAjax.do=poing.rest.insert.handler.RestReserveDelHandler
 /rest/list.do=poing.rest.display.handler.DisplayRestListHandler
 /rest/detail.do=poing.rest.display.handler.DisplayRestDetailHandler
-
 /rest/ajaxreserve.do=poing.rest.insert.handler.RestReserveHandler
-
+/rest/ajax/restListFavAjax.do=poing.rest.pick.handler.RestPickHandler
 
 
 #popup
