--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -9,6 +9,8 @@
 /user/logout.do=poing.member.auth.handler.LogoutMemberHandler
 /user/checkEmailDuple.do=poing.member.auth.handler.CheckEmailDupleHandler
 /user/ajaxfollow.do=poing.member.follow.handler.ModifyFollowHandler
+/user/setting.do=poing.member.update.handler.ChangeMemberSettingHandler
+
 
 #timeline
 /timeline.do=poing.member.display.handler.DisplayTimelineHandler
@@ -27,6 +29,7 @@
 
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
+
 
 #cart
 /popup/cart.do=poing.product.display.handler.DisplayProductCartHandler
