owner 리뷰 페이지

--- a/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
+++ b/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
@@ -1,10 +1,20 @@
 #mainpage
-/owner/index.ow=owner.display.main.handler.DisplayOwnerMainPage
+/owner/index.ow=owner.main.display.handler.DisplayOwnerMainPage
 
-/owner/charts.ow=owner.display.charts.handler.DisplayOwnerChartsPage
+/owner/index2.ow=owner.main.display.handler.DisplayOwnerMainPageTwo
 
-/owner/tables.ow=owner.display.tables.handler.DisplayOwnerTablesPage
+/owner/charts.ow=owner.charts.display.handler.DisplayOwnerChartsPage
 
-/owner/calendar.ow=owner.display.calendar.handler.DisplayOwnerCalendarPage
+/owner/tables.ow=owner.tables.display.handler.DisplayOwnerTablesPage
 
-/owner/gallery.ow=owner.display.gallery.handler.DisplayOwnerGalleryPage
+/owner/calendar.ow=owner.calendar.display.handler.DisplayOwnerCalendarPage
+
+/owner/gallery.ow=owner.gallery.display.handler.DisplayOwnerGalleryPage
+
+/owner/login.ow=owner.login.display.handler.DisplayOwnerLoginPage
+/owner/logout.ow=owner.login.logout.handler.OwnerLogoutHandler
+
+/owner/checkLogin.ow=owner.login.check.handler.CheckOwnerLoginHandler
+
+/owner/review_tables.ow=owner.review.display.handler.GetMyRestReviewListHandler
+/owner/review_detail.ow=owner.review.display.handler.GetMyRestReviewDetailHandler
