--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -44,6 +44,15 @@
     <url-pattern>/</url-pattern>
   </filter-mapping>
   
+  <filter>
+    <filter-name>checkOwnerLogin</filter-name>
+    <filter-class>com.filter.OwnerLoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>checkOwnerLogin</filter-name>
+    <url-pattern>/owner/index.ow</url-pattern>
+  </filter-mapping>
+  
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
     <servlet-class>poing.mvc.ControllerUsingURI</servlet-class>
