2019-06-07 포인트 기록남기기 끝 jindonghyen

--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -62,7 +62,7 @@
 #popup
 /popup/sign.do=poing.popup.handler.PopupHandler
 /popup/level_qna.do=poing.popup.handler.PopupHandler
-/popup/point_history.do=poing.popup.handler.PopupHandler
+/popup/point_history.do=poing.pay.productCart.DisplayPointHistoryHandler
 /popup/qna.do=poing.popup.handler.PopupHandler
 /popup/follow.do=poing.popup.handler.PopupHandler
 /popup/followList.do=poing.popup.handler.PopupHandler
