--- a/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
+++ b/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
@@ -7,9 +7,9 @@
 
 #test page
 /owner/charts.ow=owner.charts.display.handler.DisplayOwnerChartsPage
-/owner/tables.ow=owner.tables.display.handler.DisplayOwnerTablesPage
+#/owner/tables.ow=owner.tables.display.handler.DisplayOwnerTablesPage
 /owner/calendar.ow=owner.calendar.display.handler.DisplayOwnerCalendarPage
-/owner/gallery.ow=owner.gallery.display.handler.DisplayOwnerGalleryPage
+#/owner/gallery.ow=owner.gallery.display.handler.DisplayOwnerGalleryPage
 
 #login, logout
 /owner/login.ow=owner.login.display.handler.DisplayOwnerLoginPage
