--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -20,10 +20,9 @@
 #product
 /product/list.do=poing.product.display.handler.DisplayProductListHandler
 /product/detail.do=poing.product.display.handler.DisplayProductDetailHandler
-/product/productCart.do=poing.pay.productCart.DisplayProductCartHandler
 /product/productOrder.do=poing.product.display.handler.DisplayProductOrderHandler
 /product/p_payMent.do=poing.pay.productCart.ProductPayHandler
-/product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
+/product/productCart.do=poing.product.display.handler.DisplayCartHandler
 /product/cartDelete.do=poing.product.display.handler.cartDeleteHandler
 /product/deleteRefund.do=poing.product.display.handler.deleteRefundHandler
 
