--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -24,6 +24,7 @@
 /product/p_payMent.do=poing.pay.productCart.ProductPayHandler
 /product/productCart.do=poing.product.display.handler.DisplayProductCartHandler
 /product/cartDelete.do=poing.product.display.handler.cartDeleteHandler
+/product/sendInquiry.do=poing.product.Insert.handler.InsertQnAHandler
 
 
 
