--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -44,7 +44,7 @@
     <url-pattern>/</url-pattern>
   </filter-mapping>
   
-  <filter>
+<!--   <filter>
     <filter-name>checkOwnerLogin</filter-name>
     <filter-class>com.filter.OwnerLoginFilter</filter-class>
   </filter>
@@ -54,7 +54,7 @@
     <url-pattern>/owner/rest_image.ow</url-pattern>
     <url-pattern>/owner/review_tables.ow</url-pattern>
   </filter-mapping>
-  
+   -->
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
     <servlet-class>poing.mvc.ControllerUsingURI</servlet-class>
@@ -70,7 +70,7 @@
     <url-pattern>*.ejs</url-pattern> 
   </servlet-mapping>
   
-  <servlet>
+<!--   <servlet>
     <servlet-name>ControllerUsingURIOwner</servlet-name>
     <servlet-class>owner.mvc.OwnerControllerUsingURI</servlet-class>
     <init-param>
@@ -83,5 +83,5 @@
     <servlet-name>ControllerUsingURIOwner</servlet-name>
     <url-pattern>*.ow</url-pattern> 
   </servlet-mapping>
-
+ -->
 </web-app>
