--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -34,6 +34,7 @@
 
 /cart/optionCart.do=poing.cart.ConfirmOptionHandler
 /option/deleteOption.do=poing.cart.DeleteOptionHandler
+#/cart/cartValidCheck.do=poing.cart.cartValidCheckHandler
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
@@ -97,6 +98,8 @@
 /popup/change.do=poing.popup.handler.PopupHandler
 /popup/optionconfirm.do=poing.popup.handler.PopupHandler
 #/popup/follow.ejs.do=poing.popup.handler.PopupHandler
+/popup/checkTicket.do=poing.popup.handler.PopupHandler
+/popup/checkReserve.do=poing.popup.handler.PopupHandler
 #news/notice
 /user/noticeCheck.do=poing.popup.handler.PopupHandler
 /user/UserNotice.do=poing.popup.handler.PopupHandler
