--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -44,7 +44,7 @@
     <url-pattern>/</url-pattern>
   </filter-mapping>
   
-<!--    <filter>
+  <filter>
     <filter-name>checkOwnerLogin</filter-name>
     <filter-class>com.filter.OwnerLoginFilter</filter-class>
   </filter>
@@ -53,7 +53,7 @@
     <url-pattern>/owner/index.ow</url-pattern>
     <url-pattern>/owner/rest_image.ow</url-pattern>
     <url-pattern>/owner/review_tables.ow</url-pattern>
-  </filter-mapping> -->
+  </filter-mapping>
    
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
