--- a/Poing/.classpath
+++ b/Poing/.classpath
@@ -8,7 +8,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Tomcat/apache-tomcat-8.5.39/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Tomcat/apache-tomcat-8.5.39/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.39/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.39/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
