--- a/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
+++ b/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
@@ -27,3 +27,6 @@
 /owner/rest_image_add.ow=owner.restimage.add.handler.AddOwnerRestImageHandler
 /owner/rest_image_remove.ow=owner.restimage.remove.handler.RemoveOwnerRestImageHandler
 /owner/rest_image_setrepimage.ow=owner.restimage.setrepimage.handler.SetRepresentRestImageHandler
+
+/owner/review_info.ow=owner.restinfo.display.handler.DisplayOwnerRestInfoHandler
+/owner/rest_menu.ow=owner.menu.display.handler.DisplayOwnerRestMenuHandler
