--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -34,7 +34,7 @@
 
 /cart/optionCart.do=poing.cart.ConfirmOptionHandler
 /option/deleteOption.do=poing.cart.DeleteOptionHandler
-#/cart/cartValidCheck.do=poing.cart.cartValidCheckHandler
+/cart/cartValidCheck.do=poing.cart.CartValidCheckHandler
 #search
 /search/searchList.do=poing.product.display.handler.DisplaySearchHandler
 
