--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -1,19 +1,9 @@
 #mainpage
 
 #main page
-/admin/index.ow=admin.main.display.handler.DisplayadminMainPageHandler
-/admin/index2.ow=admin.main.display.handler.DisplayadminMainPageTwo
+/admin/index.ad=admin.main.display.handler.DisplayAdminMainPageHandler
 
-
-#test page
-/admin/charts.ow=admin.charts.display.handler.DisplayadminChartsPage
-/admin/tables.ow=admin.tables.display.handler.DisplayadminTablesPage
-/admin/calendar.ow=admin.calendar.display.handler.DisplayadminCalendarPage
-/admin/gallery.ow=admin.gallery.display.handler.DisplayadminGalleryPage
-
-#login, logout
-/admin/login.ow=admin.login.display.handler.DisplayadminLoginPage
-/admin/logout.ow=admin.login.logout.handler.adminLogoutHandler
-
-#checkLoginFilter
-/admin/checkLogin.ow=admin.login.check.handler.CheckadminLoginHandler
+#login
+/admin/login.ad=admin.login.display.handler.DisplayAdminLoginPage
+/admin/logout.ad=admin.login.logout.handler.AdminLogoutHandler
+/admin/checkLogin.ad=admin.login.check.handler.CheckAdminLoginHandler
