--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -84,5 +84,29 @@
     <servlet-name>ControllerUsingURIOwner</servlet-name>
     <url-pattern>*.ow</url-pattern> 
   </servlet-mapping>
+  
+  
+  <filter>
+    <filter-name>checkAdminLogin</filter-name>
+    <filter-class>com.filter.AdminLoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>checkAdminLogin</filter-name>
+    <url-pattern>/admin/index.ad</url-pattern>
+  </filter-mapping>
+  
+  <servlet>
+    <servlet-name>ControllerUsingURIAdmin</servlet-name>
+    <servlet-class>admin.mvc.AdminControllerUsingURI</servlet-class>
+    <init-param>
+      <param-name>configFile</param-name>
+      <param-value>/WEB-INF/admin/commandHandlerForAdmin.properties</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ControllerUsingURIAdmin</servlet-name>
+    <url-pattern>*.ad</url-pattern> 
+  </servlet-mapping>
 
 </web-app>
