--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -33,6 +33,7 @@
 /cart/changeCart.do=poing.cart.UpdateCartHandler
 
 /cart/optionCart.do=poing.cart.ConfirmOptionHandler
+/cart/PayCart.do=poing.cart.PayCartHandler
 /option/deleteOption.do=poing.cart.DeleteOptionHandler
 /cart/cartValidCheck.do=poing.cart.CartValidCheckHandler
 #search
