--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -7,3 +7,10 @@
 /admin/login.ad=admin.login.display.handler.DisplayAdminLoginPage
 /admin/logout.ad=admin.login.logout.handler.AdminLogoutHandler
 /admin/checkLogin.ad=admin.login.check.handler.CheckAdminLoginHandler
+
+
+#banner
+/admin/banner_image.ad=admin.bannerimage.display.handler.DisplayBannerImageHandler
+/admin/banner_image_add.ad=admin.bannerimage.add.handler.AddBannerImageHandler
+/admin/banner_image_remove.ad=admin.bannerimage.remove.handler.RemoveBannerImageHandler
+/admin/banner_image_move.ad=admin.bannerimage.move.handler.MoveBannerImageHandler
