--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -14,3 +14,7 @@
 /admin/banner_image_add.ad=admin.bannerimage.add.handler.AddBannerImageHandler
 /admin/banner_image_remove.ad=admin.bannerimage.remove.handler.RemoveBannerImageHandler
 /admin/banner_image_move.ad=admin.bannerimage.move.handler.MoveBannerImageHandler
+
+
+#editer
+/admin/editer_mypage.ad=admin.mypage.display.handler.DisplayEditerInfoHandler
