--- a/Poing/WebContent/WEB-INF/web.xml
+++ b/Poing/WebContent/WEB-INF/web.xml
@@ -112,5 +112,14 @@
     <servlet-name>ControllerUsingURIAdmin</servlet-name>
     <url-pattern>*.ad</url-pattern> 
   </servlet-mapping>
-
+	
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/view/errorpage/404error.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/view/errorpage/500error.jsp</location>
+  </error-page>
+  
 </web-app>
