--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -18,3 +18,5 @@
 
 #editer
 /admin/editer_mypage.ad=admin.mypage.display.handler.DisplayEditerInfoHandler
+/admin/editer_image_change.ad=admin.mypage.changeimage.handler.ChangeAdminImageHandler
+/admin/editer_info_change.ad=admin.mypage.changeinfo.handler.ChangeAdminInfoHandler
