--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -20,3 +20,4 @@
 /admin/editer_mypage.ad=admin.mypage.display.handler.DisplayEditerInfoHandler
 /admin/editer_image_change.ad=admin.mypage.changeimage.handler.ChangeAdminImageHandler
 /admin/editer_info_change.ad=admin.mypage.changeinfo.handler.ChangeAdminInfoHandler
+/admin/editer_review.ad=admin.review.write.handler.WriteEditerReviewHandler
