--- a/Poing/.classpath
+++ b/Poing/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.39/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.39/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
