--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -15,6 +15,11 @@
 /admin/banner_image_remove.ad=admin.bannerimage.remove.handler.RemoveBannerImageHandler
 /admin/banner_image_move.ad=admin.bannerimage.move.handler.MoveBannerImageHandler
 
+/admin/product_banner.ad=admin.productbanner.display.handler.DisplayProductBannerHandler
+/admin/move_product_banner.ad=admin.productbanner.move.handler.MoveProductBannerHandler
+#/admin/modify_product_banner.ad
+
+
 
 #editer
 /admin/editer_mypage.ad=admin.mypage.display.handler.DisplayEditerInfoHandler
