--- a/Poing/WebContent/WEB-INF/commandHandler.properties
+++ b/Poing/WebContent/WEB-INF/commandHandler.properties
@@ -25,6 +25,7 @@
 /product/productCart.do=poing.product.display.handler.DisplayCartHandler
 /product/cartDelete.do=poing.product.display.handler.cartDeleteHandler
 /product/deleteRefund.do=poing.product.display.handler.deleteRefundHandler
+/product/p_payMents.do=poing.cart.PayCartInsertHandler
 
 
 
