--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -17,7 +17,8 @@
 
 /admin/product_banner.ad=admin.productbanner.display.handler.DisplayProductBannerHandler
 /admin/move_product_banner.ad=admin.productbanner.move.handler.MoveProductBannerHandler
-#/admin/modify_product_banner.ad
+/admin/add_product_banner.ad=admin.productbanner.add.handler.AddProductBannerHandler
+/admin/modify_product_banner.ad=admin.productbanner.modify.handler.ModifyProductBannerHandler
 
 
 
