0614관리자 예약 완료

--- a/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
+++ b/Poing/WebContent/WEB-INF/owner/commandHandlerForOwner.properties
@@ -28,6 +28,8 @@
 /owner/ajax/restInfoBanner.ow=owner.restinfo.display.handler.DisplayOwnerRestInfoBannerHandler
 /owner/ajax/restInfoDetail.ow=owner.restinfo.display.handler.DisplayOwnerRestInfoDetailHandler
 /owner/ajax/reserve_confirm.ow=owner.restinfo.display.handler.DisplayOwnerReserveConfirmHandler
+/owner/ajax/reserve_confirmY.ow=owner.restinfo.display.handler.DisplayOwnerReserveConfirmYHandler
+/owner/ajax/reserve_confirmN.ow=owner.restinfo.display.handler.DisplayOwnerReserveConfirmNHandler
 
 
 /owner/rest_menu.ow=owner.menu.display.handler.DisplayOwnerRestMenuHandler
