product 메뉴 정보 출력

--- a/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
+++ b/Poing/WebContent/WEB-INF/admin/commandHandlerForAdmin.properties
@@ -19,7 +19,7 @@
 /admin/move_product_banner.ad=admin.productbanner.move.handler.MoveProductBannerHandler
 /admin/add_product_banner.ad=admin.productbanner.add.handler.AddProductBannerHandler
 /admin/modify_product_banner.ad=admin.productbanner.modify.handler.ModifyProductBannerHandler
-
+/admin/delete_product_banner.ad=admin.productbanner.remove.handler.RemoveProductBannerHandler
 
 
 #editer
